--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,20 +2,24 @@
 
 <div class = "container">
 	<div class = "row">
-		<div class = "col-md-6 col-sm-12 border">
-			<h3 class = "text-center"> search </h3>
-			<form action = "./item/search" method = "POST">
-				<input id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength= "3" required>
-				<button  type="submit">
-					<i class="fa fa-search"></i>
-				</button>
-			</form>
+		<div class = "col-md-6 col-sm-12 mt-5">
+			<img class = "featureimage position-absolute" src = "/images/small/556.gif">
+			<div class = "mainfeature">
+				<h3 class = "text-center"> search </h3>
+				<form action = "./item/search" method = "POST">
+					<input id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength= "3" required>
+					<button  type="submit">
+						<i class="fa fa-search"></i>
+					</button>
+				</form>
+			</div>
 		</div>
-		<div class = "col-md-6 col-sm-12 border">
-			<h3 class = "text-center"> sort by </h3>
-			<form id = "sortform" action = "./item/sort" method = "GET">
-				<div class = "row">
-					<div class = "col-6">
+		<div class = "col-md-6 col-sm-12 mt-5">
+			<img class = "featureimage position-absolute" src = "/images/small/556.gif">
+			<div class = "mainfeature">
+				<form class = "pl-5" id = "sortform" action = "./item/sort" method = "GET">
+					<h3 class = "text-center"> sort by </h3>
+					<div id = "sortoptions">
 						<button type = "button" id = "addoption"> <i class="fa fa-plus"></i></button>
 						<select class = "sortby" id = "firstselect" name = "sortby[0]">
 							<option value="sortByNone">none</option>
@@ -24,39 +28,50 @@
 							<option value="sortByLimit">by item limit</option>
 						</select>
 					</div>
-					<div class = "col-6">
-						<h4> filters </h4>
-						<p> 
-							<input type="checkbox" name="filterByNonMember"> f2p only
-						</p>
-						<p> 
-							<input type="checkbox" name="filterByTrend"> trend
-							<select name = "trendType">
-								<option value="filterByPositiveTrend">positive</option>
-								<option value="filterByNegativeTrend">negative</option>
-								<option value="filterByNeutralTrend">neutral</option>
-							</select>
-						</p>
-						<p> 
-							<input type="checkbox" name="filterByPriceLowerBound"> minimum price
-							<input type="number" name="priceLowerBound">
-						</p>
-						<p> 
-							<input type="checkbox" name="filterByPriceUpperBound"> maximum price
-							<input type="number" name="priceUpperBound">
-						</p>
-						<p> 
-							<input type="checkbox" name="filterByVolumeLowerBound"> minimum volume
-							<input type="number" name="volumeLowerBound">
-						</p>
-						<p> 
-							<input type="checkbox" name="filterByVolumeUpperBound"> maximum volume
-							<input type="number" name="volumeUpperBound">
-						</p>
+					<div class = "d-flex justify-content-center">
+						<button id = "sortsubmit" class = "btn btn-primary">submit</button>
+					</div>
+				</form>
+				<div id = "filterform" class = "position-absolute">
+					<div id = "filteroptions" class = "d-inline-block">
+						<div>
+							<h4> filters </h4>
+							<p> 
+								<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
+							</p>
+							<p> 
+								<input type="checkbox" name="filterByTrend" class = "filterdata"> trend
+								<select name = "trendType" class = "filterdata">
+									<option value="filterByPositiveTrend">positive</option>
+									<option value="filterByNegativeTrend">negative</option>
+									<option value="filterByNeutralTrend">neutral</option>
+								</select>
+							</p>
+							<p> 
+								<input type="checkbox" name="filterByPriceLowerBound" class = "filterdata"> minimum price
+								<input type="number" name="priceLowerBound" class = "filterdata">
+							</p>
+							<p> 
+								<input type="checkbox" name="filterByPriceUpperBound" class = "filterdata"> maximum price
+								<input type="number" name="priceUpperBound" class = "filterdata">
+							</p>
+							<p> 
+								<input type="checkbox" name="filterByVolumeLowerBound" class = "filterdata"> minimum volume
+								<input type="number" name="volumeLowerBound" class = "filterdata">
+							</p>
+							<p> 
+								<input type="checkbox" name="filterByVolumeUpperBound" class = "filterdata"> maximum volume
+								<input type="number" name="volumeUpperBound" class = "filterdata">
+							</p>
+						</div>
+					</div>
+					<div id = "filterslideout" class = "d-inline-flex align-items-center">
+						<div id = "slidebutton" class = "d-flex align-items-center"> 
+							<div>></div>
+						</div>
 					</div>
 				</div>
-				<input type = "submit">
-			</form>
+			</div>
 		</div>
 	</div>
 	<% if (user) {%>
@@ -115,7 +130,9 @@
 
 
 <script>
+	//for sortform
 var sortform = $("#sortform");
+var sortsubmit = $("#sortsubmit");
 
 var options = 
 {
@@ -159,7 +176,57 @@ $("#addoption").click(function () {
 	}
 });
 
+sortsubmit.click(function ()
+{
 
+});
+
+
+</script>
+
+<script>
+	// for toggling image fading animations
+	$(".featureimage").mouseenter(function () {
+		$(this).finish().fadeOut(250);
+	});
+	$(".mainfeature").mouseleave(function()
+	{
+		$(this).siblings(".featureimage").finish().fadeTo(250, .75);
+	});
+	//center the featureimage
+	$(".featureimage").css("z-index", 1).css({
+		width : $(".mainfeature").width() - 50,
+		left : (($(".mainfeature").parent().outerWidth() - $(".mainfeature").width()) / 2) + 25,
+		top : 25
+ 	});
+
+	$(".mainfeature").css("height", $(".mainfeature").width());
+</script>
+
+<script>
+	// for sliding animations
+
+	var filteroptions = $("#filteroptions");
+	var buttonstate = false;
+	//make a new array just to make use of the foreach function lol
+	var arr = new Array();
+	for (var i = 0; i < 100; i ++)
+	{
+		arr.push(i);
+	}
+
+	$("#slidebutton").click(function()
+	{
+		buttonstate = !buttonstate;
+		arr.forEach(function(value, index)
+		{
+			setTimeout(function()
+			{
+				filteroptions.css("width", value * 4);
+			}, index * 5);
+		});
+		arr = arr.reverse();
+	});
 </script>
 
 <% include ./partials/footer.ejs %>
