--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,21 +22,24 @@
 
 </head>
 <body>
-	<div class = "container">
-		<div class = "row justify-content-between">
-			<div class = "col-2">
-				<a href = "/" >  GE TRACKER </a>
-			</div>
-			<div class = "col-1">
-				<% if (user !== null){ %>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	  <a class="navbar-brand ml-4" href="/">OSRS INVEST</a>
+	  <div class="collapse navbar-collapse">
+	    <ul class="navbar-nav mr-auto">
+	     	
+	    </ul>
+	    <span class="navbar-text mr-4">
+	    	<a href = "/about"> about </a>
+	    </span>
+	    <span class="navbar-text mr-4">
+	    	<% if (user !== null){ %>
 				<form action = "/logout" method = POST>
-					<button type = "submit"> logout </button>
+					<button class = "btn btn-dark" type = "submit"> logout </button>
 				</form>
 				<% } else {%>
 				<a href = "/login" > login </a>
-				<% }%>
-			</div>
-		</div>
-	</div>
-	
+			<% }%>
+	    </span>
+	  </div>
+	</nav>
 	
