--- a/public/app.css
+++ b/public/app.css
@@ -8,10 +8,6 @@ td
 	border : black solid 2px;
 }
 
-input[type="range"]
-{
-	width : 90%;
-}
 
 .mainfeature
 {
@@ -23,6 +19,7 @@ input[type="range"]
 
 .featureimage
 {
+	opacity : .1;
 	top: 1px;
 	left: 1px;
 }
@@ -41,6 +38,17 @@ input[type="range"]
 	background-color: gray;
 }
 
+.progress-bar
+{
+	width: 50%;
+}
+
+.weightrange
+{
+	width: 100%;
+	opacity: 0;
+}
+
 #searchbox
 {
 	width : 77%;
@@ -48,11 +56,16 @@ input[type="range"]
 
 #sortform select
 {
-	width : 77%;
+	
 }
 #sortform 
 {
 	height : 100%;
+}
+
+#daterange
+{
+	width : 90%;
 }
 
 #daterangeindicator
