--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,10 @@
 							<h4 class = "text-center"> filters </h4>
 							<br>
 							<p> 
+								<input type="checkbox" name="filterByPosition" class = "filterdata"> show the first
+								<input type="number" name="position" class = "filterdata">
+							</p>
+							<p> 
 								<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
 							</p>
 							<p> 
