--- a/views/results.ejs
+++ b/views/results.ejs
@@ -34,7 +34,9 @@
                 <td> <%= items[i].members %> </td>
                 <td> 
                     <div class="progress">
-                      <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 40%"></div>
+                      <div class="progress-bar bg-success" role="progressbar" style="width: 30%"></div>
+                      <div class="progress-bar bg-info" role="progressbar" style="width: 20%"></div>
                     </div>
                 </td>
             </tr>
