--- a/public/app.css
+++ b/public/app.css
@@ -9,9 +9,28 @@ td
 }
 
 
+input[type='text']
+{
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+}
+
+
+.pointerpass
+{
+	pointer-events: none;
+}
+.navbar
+{
+	background-color: #EEEBE4;
+	box-shadow: 10px 1px 10px black;
+}
+
 .mainfeature
 {
-	border : solid 5px black;
+	background-color: #EEEBE4;
+	box-shadow: 0 15px 6px -6px #888888;
 	z-index : 0;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -19,9 +38,9 @@ td
 
 .featureimage
 {
-	opacity : .1;
-	top: 1px;
-	left: 1px;
+	box-shadow: 0 15px 6px -6px #888888;
+	width: 100%;
+	opacity : .5;
 }
 
 .item
@@ -49,20 +68,62 @@ td
 	opacity: 0;
 }
 
+/*******************************************************************
+courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
+*******************************************************************/
+.flip-card {
+  width: 100%;
+   /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flipthecard
+{
+	transform : rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
+
+#maincontainer
+{
+	height: 600px;
+}
+
 #searchbox
 {
 	width : 77%;
 }
 
-#sortform select
-{
-	
-}
 #sortform 
 {
 	height : 100%;
 }
-
 #daterange
 {
 	width : 90%;
@@ -79,17 +140,22 @@ td
 	height : 100%;
 	top : 0px;
 	font-size: 0;
+	z-index: 5;
 }
+
 #filteroptions
 {
-	vertical-align:top;
+	
 	overflow-y: auto;
 	overflow-x: hidden;
-	background-color: white;
+	background-color: #cfc4b0;
 	width : 0px;
 	height : 100%;
 	font-size: 1rem;
+	border-top-right-radius: 50px;
+	border-bottom-right-radius: 50px;
 }
+
 #filterslideout
 {
 	vertical-align : top;
@@ -98,10 +164,12 @@ td
 #slidebutton
 {
 	font-size: 30px;
-	height: 60%;
+	height: 20%;
 	background-color: white;
 	opacity: 1;
 	border-bottom-right-radius: 60px;
 	border-top-right-radius: 60px;
+	background-color: #F2F2F2;
+
 }
 
