--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,102 +1,122 @@
 <% include ./partials/header.ejs %>
 
-<div class = "container">
-	<div class = "row">
-		<div class = "col-md-6 col-sm-12 mt-5">
-			<img class = "featureimage position-absolute" src = "/images/small/556.gif">
-			<div class = "mainfeature">
-				<h3 class = "text-center"> search </h3>
-				<form action = "./item/search" method = "POST">
-					<input id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength= "3" required>
-					<button  type="submit">
-						<i class="fa fa-search"></i>
-					</button>
-				</form>
+<div class = "container" id = "maincontainer">
+	<div class = "row justify-content-around">
+		<div class = "col-md-5 col-sm-12 mt-5">
+			<div class = "flip-card">
+				<div class ="flip-card-inner">
+					<div class = "flip-card-front">
+						<img class = "featureimage" src = "https://img.icons8.com/cotton/64/000000/detective.png">
+					</div>
+					<div class = "flip-card-back">
+						<div class = "mainfeature">
+							<div id = "searchform">
+								<h3 class = "text-center"> search </h3>
+								<form action = "./item/search" method = "POST">
+									<div class = "d-flex justify-content-center">
+										<input id = "searchbox" type = "text" name = "searchQuery" placeholder= "enter item name" minlength= "3" required><button  type="submit">
+											<i class="fa fa-search"></i>
+										</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class = "col-md-6 col-sm-12 mt-5">
-			<img class = "featureimage position-absolute" src = "/images/small/556.gif">
-			<div class = "mainfeature">
-				<form class = "pl-5" id = "sortform" action = "./item/sort" method = "GET">
-					<h3 class = "text-center"> sort by </h3>
-					<p> 
-						<input type="radio" name = "typeSort" value="roundedSort"> rounded sort
-					</p>
-					<p> 
-						<input type="radio" name = "typeSort" value="weightedSort"> weighted sort
-					</p>
-					<button type = "button" id = "addoption"> <i class="fa fa-plus"></i></button>
-					<div class = "sortoptions">
-						<select class = "sortby" id = "firstselect" name = "sortby[0]">
-							<option value="sortByNone">none</option>
-							<option value="sortByPrice">by current price</option>
-							<option value="sortByVolume">by current volume</option>
-						</select>
-						<div class="progress position-relative">
-							<div class="progress-bar" role="progressbar"></div>
-							<input name = "weight[0]" class = "position-absolute weightrange" type = "range">
-						</div>
+		<div class = "col-md-5 col-sm-12 mt-5">
+			<div class = "flip-card">
+				<div class ="flip-card-inner">
+					<div class = "flip-card-front">
+						<img class = "featureimage" src = "https://img.icons8.com/wired/64/000000/statistics.png">
 					</div>
-					<div class = "d-flex justify-content-center">
-						<button id = "sortsubmit" class = "btn btn-light">sort</button>
-					</div>
-				</form>
-				<div id = "filterform" class = "position-absolute">
-					<div id = "filteroptions" class = "d-inline-block">
-						<div>
-							<h4 class = "text-center"> filters </h4>
-							<br>
-							<p> 
-								<input type="checkbox" name="filterByPosition" class = "filterdata"> show the first
-								<input type="number" name="position" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByTrend" class = "filterdata"> trend
-								<select name = "trendType" class = "filterdata">
-									<option value="filterByPositiveTrend">positive</option>
-									<option value="filterByNegativeTrend">negative</option>
-									<option value="filterByNeutralTrend">neutral</option>
-								</select>
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByPriceLowerBound" class = "filterdata"> minimum price
-								<input type="number" name="priceLowerBound" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByPriceUpperBound" class = "filterdata"> maximum price
-								<input type="number" name="priceUpperBound" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByVolumeLowerBound" class = "filterdata"> minimum volume
-								<input type="number" name="volumeLowerBound" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByVolumeUpperBound" class = "filterdata"> maximum volume
-								<input type="number" name="volumeUpperBound" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByItemLimitUpperBound" class = "filterdata"> maximum item limit
-								<input type="number" name="itemLimitUpperBound" class = "filterdata">
-							</p>
-							<p> 
-								<input type="checkbox" name="filterByItemLimitLowerBound" class = "filterdata"> minimum item limit
-								<input type="number" name="itemLimitLowerBound" class = "filterdata">
-							</p>
-						</div>
-					</div>
-					<div id = "filterslideout" class = "d-inline-flex align-items-center">
-						<div id = "slidebutton" class = "d-flex align-items-center"> 
-							<div>></div>
+					<div class = "flip-card-back">
+						<div class = "mainfeature position-relative">
+							<form class = "pl-5" id = "sortform" action = "./item/sort" method = "GET">
+								<h3 class = "text-center"> sort by </h3>
+								<p> 
+									<input type="radio" name = "typeSort" value="roundedSort"> rounded sort
+								</p>
+								<p> 
+									<input type="radio" name = "typeSort" value="weightedSort"> weighted sort
+								</p>
+								<button type = "button" id = "addoption"> <i class="fa fa-plus"></i></button>
+								<div class = "sortoptions">
+									<select class = "sortby" id = "firstselect" name = "sortby[0]">
+										<option value="sortByNone">none</option>
+										<option value="sortByPrice">by current price</option>
+										<option value="sortByVolume">by current volume</option>
+									</select>
+									<div class="progress position-relative d-none">
+										<div class="progress-bar" role="progressbar"></div>
+										<input name = "weight[0]" class = "position-absolute weightrange" type = "range">
+									</div>
+								</div>
+								<div class = "d-flex justify-content-center">
+									<button id = "sortsubmit" class = "btn btn-light">sort</button>
+								</div>
+							</form>
+							<div id = "filterform" class = "position-absolute">
+								<div id = "filteroptions" class = "d-inline-block">
+									<div>
+										<h4 class = "text-center"> filters </h4>
+										<br>
+										<p> 
+											<input type="checkbox" name="filterByPosition" class = "filterdata"> show the first
+											<input type="number" name="position" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByNonMember" class = "filterdata"> f2p only
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByTrend" class = "filterdata"> trend
+											<select name = "trendType" class = "filterdata">
+												<option value="filterByPositiveTrend">positive</option>
+												<option value="filterByNegativeTrend">negative</option>
+												<option value="filterByNeutralTrend">neutral</option>
+											</select>
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByPriceLowerBound" class = "filterdata"> minimum price
+											<input type="number" name="priceLowerBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByPriceUpperBound" class = "filterdata"> maximum price
+											<input type="number" name="priceUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByVolumeLowerBound" class = "filterdata"> minimum volume
+											<input type="number" name="volumeLowerBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByVolumeUpperBound" class = "filterdata"> maximum volume
+											<input type="number" name="volumeUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByItemLimitUpperBound" class = "filterdata"> maximum item limit
+											<input type="number" name="itemLimitUpperBound" class = "filterdata">
+										</p>
+										<p> 
+											<input type="checkbox" name="filterByItemLimitLowerBound" class = "filterdata"> minimum item limit
+											<input type="number" name="itemLimitLowerBound" class = "filterdata">
+										</p>
+									</div>
+								</div>
+								<div id = "filterslideout" class = "d-inline-flex align-items-center">
+									<div id = "slidebutton" class = "d-flex align-items-center"> 
+										<div>></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<% if (user) {%>
+</div>
+<% if (user) {%>
 		<div class = "container"> 
 			<h3 class = "text-center mt-3"> investments </h3>
 			<% for (var i = 0; i < investmentResults.length; i ++) { %>
@@ -145,7 +165,8 @@
 		</div>
 			
 	<% }%>
-</div>
+
+<a class = "pl-5" href = "https://icons8.com">icons from icons8</a>
 
 <script>
 	$("#sortform").on("input", ".sortoptions input[type='range']", function(event)
@@ -168,7 +189,7 @@ var options =
 }
 var optionIndex = 1; //number of options that have been selected, also serves as unique index for naming the new option for select element
 var optionString = "";
-
+var checked = {roundedSort : false, weightedSort : false};
 
 sortform.on("submit", function ()
 {
@@ -197,8 +218,8 @@ $("#addoption").click(function () {
 				"<select class = \"sortby\"name = \"sortby[" + optionIndex + "]\">" +
 					optionString +
 				"</select>" +
-				"<div class=\"progress position-relative\">" +
-					"<div id = \"test\" class=\"progress-bar\" role=\"progressbar\"></div>" +
+				"<div class=\"progress position-relative " + (checked[$("input[value='weightedSort']").prop("value")] ? "" : "d-none") + "\">" +
+					"<div id = \"test\" class=\"progress-bar\"role=\"progressbar\"></div>" +
 					"<input name = \"weight[" + optionIndex + "]\" class = \"position-absolute weightrange\" type = \"range\"> "+
 				"</div>" +	
 			"</div"
@@ -207,7 +228,6 @@ $("#addoption").click(function () {
 	}
 });
 
-var checked = {roundedSort : false, weightedSort : false};
 
 $("input[type='radio']").click(function()
 {
@@ -215,6 +235,10 @@ $("input[type='radio']").click(function()
 	{
 		$(this).prop("checked", false);
 		checked[$(this).prop("value")] = false;
+		if ($(this).prop("value") === "weightedSort")
+		{
+			$(".progress").toggleClass("d-none");
+		}
 	}
 	else
 	{
@@ -223,6 +247,10 @@ $("input[type='radio']").click(function()
 			checked[sorttype] = false;
 		}
 		checked[$(this).prop("value")] = true;
+		if ($(this).prop("value") === "weightedSort")
+		{
+			$(".progress").toggleClass("d-none");
+		}
 	}
 });
 
@@ -236,22 +264,18 @@ sortsubmit.click(function ()
 </script>
 
 <script>
-	// for toggling image fading animations
-	$(".featureimage").mouseenter(function () {
-		$(this).finish().fadeOut(250);
-	});
-	$(".mainfeature").mouseleave(function()
-	{
-		$(this).siblings(".featureimage").finish().fadeTo(250, .1);
-	});
-	//center the featureimage
-	$(".featureimage").css("z-index", 1).css({
-		width : $(".mainfeature").width() - 50,
-		left : (($(".mainfeature").parent().outerWidth() - $(".mainfeature").width()) / 2) + 25,
-		top : 25
- 	});
+	// for flipping the cards
+ 	 $(".flip-card").on("click", function()
+ 	 {
+ 	 	$(this).children($(".flip-card-inner")).toggleClass("flipthecard");
+ 	 	$(this).find($(".featureimage")).toggleClass("pointerpass");
+ 	 });
+ 	 $("#searchform").children().on("click", (event) => event.stopPropagation());
+ 	 $("#sortform").on("click", "*", (event) => event.stopPropagation());
+ 	 $("#addoption *").off("click");
+ 	 $("#filterform").children().on("click", (event) => event.stopPropagation());
 
-	$(".mainfeature").css("height", $(".mainfeature").width());
+	 $(".mainfeature").css("height", $(".featureimage").height());
 </script>
 
 <script>
