--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-light">
 	  <a class="navbar-brand ml-4" href="/">OSRS INVEST</a>
 	  <div class="collapse navbar-collapse">
 	    <ul class="navbar-nav mr-auto">
