updated itemlist, removed asgarnian ale, dragon bitter, chefs delight and greenmans ale

--- a/public/app.css
+++ b/public/app.css
@@ -173,3 +173,17 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 
 }
 
+#inthegreen
+{
+	width: 300px;
+	background-color: green;
+	top: 65px;
+}
+
+#inthered
+{
+	width: 300px;
+	top: 65px;
+	right: 0px;
+	background-color: red;
+}
