--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,4 +42,12 @@
 	    </span>
 	  </div>
 	</nav>
+
 	
+	<div class = "position-absolute" id = "inthegreen">
+		
+	</div>
+
+	<div class = "position-absolute" id = "inthered">
+		
+	</div>
