--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,30 +1,32 @@
 <% include ./partials/header.ejs %>
 
 <div class = "container">
-    <div> last updated: <%= item.lastUpdated.toDateString() %>
-            <form class = "d-inline" action = "/item/data/<%=item.name_lower%>" method = "POST">
-                <button type = "submit"> <i class = "fa fa-refresh"> </i> </button>
-            </form>
-        </div>
-    <div class = "row">
-        <div class = "col-sm-6 col-md-3">
-            <div class="card">
-            <img class = "card-img-top" alt= "<%= item.name %>" src= "/images/big/<%=item.id%>.gif">
-                <div class="card-body">
-                    <h5 class="card-title"><%= item.name %></h5>
-                    <p class="card-text"><%= item.description %></p>
+    <div class = "pl-2 pr-2">
+        <div> last updated: <%= item.lastUpdated.toDateString() %>
+                <form class = "d-inline" action = "/item/data/<%=item.name_lower%>" method = "POST">
+                    <button type = "submit"> <i class = "fa fa-refresh"> </i> </button>
+                </form>
+            </div>
+        <div class = "row">
+            <div class = "col-sm-6 col-md-3">
+                <div class="card">
+                <img class = "card-img-top" alt= "<%= item.name %>" src= "/images/big/<%=item.id%>.gif">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= item.name %></h5>
+                        <p class="card-text"><%= item.description %></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class = "col-sm-6 col-md-9">
-            <canvas id= "myChart" width="225" height="100"></canvas>
-            <div class = "d-flex justify-content-center">  
-                <input id = "daterangeindicator" class = "text-center" type = "text" disabled> 
-            </div>
-            <div class = "d-flex justify-content-between">
-                <button id = "decrease"> <i class = "fa fa-minus"> </i> </button>
-                <input id = "daterange" type="range" min="1" max="1500" value="1">
-                <button id = "increase"> <i class = "fa fa-plus"> </i> </button>
+            <div class = "col-sm-6 col-md-9">
+                <canvas id= "myChart" width="225" height="100"></canvas>
+                <div class = "d-flex justify-content-center">  
+                    <input id = "daterangeindicator" class = "text-center" type = "text" disabled> 
+                </div>
+                <div class = "d-flex justify-content-between">
+                    <button id = "decrease"> <i class = "fa fa-minus"> </i> </button>
+                    <input id = "daterange" type="range" min="1" max="1500" value="1">
+                    <button id = "increase"> <i class = "fa fa-plus"> </i> </button>
+                </div>
             </div>
         </div>
     </div>
