--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,15 +43,67 @@
 	  </div>
 	</nav>
 
-	
-	<div class = "position-absolute" id = "inthegreen">
-		
-	</div>
-
-	<div class = "position-absolute" id = "inthered">
-		
-	</div>
-
 	<% if (user !== null){ %>
-		<%= user %>
+		<% var profits= []; var losses = []; %>
+		<% for (var i = 0; i < user.investments.length; i ++) { %>
+			<% if (user.investments[i].pricePerItemInvested < user.investments[i].currentPricePerItem) { %>
+			<% profits.push(user.investments[i]); %>
+			<% } else { %>
+			<% losses.push(user.investments[i]); %>
+			<% } %>
+		<% } %>
+		<div id = "inthegreen">
+			<% for (var i = 0; i < profits.length; i ++) { %>
+				<div class = "container greeninvestment">
+					<div class = "row justify-content-between">
+						<div class = "col-4">
+							x<%=profits[i].numInvested%>
+							<img src = "/images/small/<%=profits[i].id%>.gif" title = "<%=profits[i].name%>">
+							<%= Math.floor( (profits[i].dateInvested - profits[i].lastUpdated) / (1000 * 60 * 60 * 24) )%> days ago
+						</div>
+						<div class = "col-8">
+							<div>
+								gp ea. <%=profits[i].pricePerItemInvested%> -> <%=profits[i].currentPricePerItem%>
+								total <%=profits[i].pricePerItemInvested * profits[i].numInvested%> -> <%=profits[i].currentPricePerItem * profits[i].numInvested%>
+							</div>
+						</div>
+					</div>
+				</div>
+			<% } %>
+		</div>
+		<div id = "inthered">
+			<% for (var i = 0; i < losses.length; i ++) { %>
+				<div class = "container redinvestment">
+					<div class = "row justify-content-between">
+						<div class = "col-4">
+							x<%=losses[i].numInvested%>
+							<img src = "/images/small/<%=losses[i].id%>.gif" title = "<%=losses[i].name%>">
+							<%= Math.floor( (losses[i].dateInvested - losses[i].lastUpdated) / (1000 * 60 * 60 * 24) )%> days ago
+						</div>
+						<div class = "col-8">
+							<div>
+								gp ea. <%=losses[i].pricePerItemInvested%> -> <%=losses[i].currentPricePerItem%>
+									total <%=losses[i].pricePerItemInvested * losses[i].numInvested%> -> <%=losses[i].currentPricePerItem * losses[i].numInveste%>
+							</div>
+						</div>
+					</div>
+				</div>
+			<% } %>
+		</div>
 	<% }%>
+
+	<script>
+		if ($(".greeninvestment").length > 0)
+		{
+			$("#inthegreen").css("background-image", "linear-gradient(#1fcf4e, #b2edc2, white)");
+		}
+		if ($(".redinvestment").length > 0)
+		{
+			$("#inthered").css("background-image", "linear-gradient(white, #eb918a, #e62315)");
+		}
+
+
+	</script>
+
+
+	
