--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,43 +1,45 @@
 <% include ./partials/header.ejs %>
 
 <div class = "container">
-    <h1> <%=items.length%> results for "<%= query %>"</h1>
-	<table id = "results">
-        <tr>
-            <th></th>
-            <th>ID</th> 
-            <th>ITEM LIMIT</th> 
-            <th>CURRENT PRICE</th>
-            <th>CURRENT VOLUME</th>
-            <th>CURRENT TREND</th>
-            <th>CURRENT TREND DURATION</th>
-            <th>MEMBERS ONLY</th>
-        </tr>
-        <% for(var i=0; i<items.length; i++) { %>
-               <tr class = "item d-none">
-                   <td> 
-                       <% if (user) { %>
-                        <button class = "additem" 
-                        data-item-name = "<%= items[i].name %>" 
-                        data-item-name-lower = "<%= items[i].name_lower %>" 
-                        data-item-price = "<%= items[i].statdata.currentPrice.price %>"
-                        data-item-updated = "<%= items[i].lastUpdated.toDateString() %>">
-                               <i class = "fa fa-plus"> </i> 
-                           </button>
-                       <% } %>
-                       <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
-                       <img src = "/images/small/<%=items[i].id%>.gif">
-                    </td>
-                   <td> <%= items[i].id %> </td>
-                   <td> <%= items[i].limit %> </td>
-                   <td> <%= items[i].statdata.currentPrice.toLocaleString() %> </td>
-                   <td> <%= items[i].statdata.currentVolume.toLocaleString() %> </td>
-                   <td> <%= items[i].statdata.currentTrend%> </td>
-                   <td> <%= items[i].statdata.currentTrendDuration%> </td>
-                   <td> <%= items[i].members %> </td>
-               </tr>
-        <% } %>
-    </table>
+    <div class = "pl-3 pr-3">
+        <h1> <%=items.length%> results for "<%= query %>"</h1>
+    	<table id = "results">
+            <tr>
+                <th></th>
+                <th>ID</th> 
+                <th>ITEM LIMIT</th> 
+                <th>CURRENT PRICE</th>
+                <th>CURRENT VOLUME</th>
+                <th>CURRENT TREND</th>
+                <th>CURRENT TREND DURATION</th>
+                <th>MEMBERS ONLY</th>
+            </tr>
+            <% for(var i=0; i<items.length; i++) { %>
+                   <tr class = "item d-none">
+                       <td> 
+                           <% if (user) { %>
+                            <button class = "additem" 
+                            data-item-name = "<%= items[i].name %>" 
+                            data-item-name-lower = "<%= items[i].name_lower %>" 
+                            data-item-price = "<%= items[i].statdata.currentPrice.price %>"
+                            data-item-updated = "<%= items[i].lastUpdated.toDateString() %>">
+                                   <i class = "fa fa-plus"> </i> 
+                               </button>
+                           <% } %>
+                           <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
+                           <img src = "/images/small/<%=items[i].id%>.gif">
+                        </td>
+                       <td> <%= items[i].id %> </td>
+                       <td> <%= items[i].limit %> </td>
+                       <td> <%= items[i].statdata.currentPrice.toLocaleString() %> </td>
+                       <td> <%= items[i].statdata.currentVolume.toLocaleString() %> </td>
+                       <td> <%= items[i].statdata.currentTrend%> </td>
+                       <td> <%= items[i].statdata.currentTrendDuration%> </td>
+                       <td> <%= items[i].members %> </td>
+                   </tr>
+            <% } %>
+        </table>
+    </div>
 
     <div class = "d-flex justify-content-center">
         <div>
@@ -71,7 +73,7 @@
                             "<h3> quantity </h3>" +
                             "<input name = 'quantity' type = 'number' min = 1 required>" +
                             "<h3> price per item</h3>" +
-                            "<input name = 'pricePerItem' type = 'number' min = 1 required>" +
+                            "<input name = 'pricePerItem' type = 'number' value = '" + itemPrice + "' min = 1 required>" +
                             "<h3> Total Price </h3>" +
                             "<span id = 'totalPrice'> 0 gp </span>" +
                             "<input class = 'd-block' type = 'submit'>" +
@@ -85,10 +87,11 @@
         {
             let ppi = parseInt($("input[name='pricePerItem']")[0].value);
             let qty = parseInt($("input[name='quantity']")[0].value);
-            console.log("hello");
+            console.log(ppi);
+            console.log(qty);
             if (ppi > 0 && qty > 0)
             {
-                $("#totalPrice").text($(this)[0].value * $("input[name='quantity']")[0].value + " gp");
+                $("#totalPrice").text((ppi * qty) + " gp");
             }
         });
 
