--- a/public/app.css
+++ b/public/app.css
@@ -176,7 +176,7 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 #inthegreen
 {
 	position : absolute;
-	width: 250px;
+	width: 13%;
 	top: 70px;
 }
 
@@ -188,7 +188,7 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 #inthered
 {
 	position : absolute;
-	width: 250px;
+	width: 13%;
 	top: 70px;
 	right: 0px;
 	background-color: red;
