--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,8 +15,8 @@
 <link rel = "stylesheet" href = "/bootstrap.css">
 
 <!-- chart.js -->
-<script src="/chart.js"></script>
-<link rel = "stylesheet" href = "/chart.css">
+<script src="/Chart.js"></script>
+<link rel = "stylesheet" href = "/Chart.css">
 
 <link rel = "stylesheet" href = "/app.css">
 
