--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -35,8 +35,8 @@
                      </td>
                     <td> <%= items[i].id %> </td>
                     <td> <%= items[i].limit %> </td>
-                    <td> <%= items[i].statdata.currentPrice.toLocaleString() %> </td>
-                    <td> <%= items[i].statdata.currentVolume.toLocaleString() %> </td>
+                    <td> <%= items[i].statdata.currentPrice.price.toLocaleString() %> </td>
+                    <td> <%= items[i].statdata.currentVolume.volume.toLocaleString() %> </td>
                     <td> <%= items[i].statdata.currentTrend%> </td>
                     <td> <%= items[i].statdata.currentTrendDuration%> </td>
                     <td> <%= items[i].members %> </td>
@@ -55,18 +55,19 @@
             <% } %>
         </table>
     </div>
-
-    <div class = "d-flex justify-content-center">
-        <div>
-            <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
-            <button class = "btn btn-outline-primary" id = "prev"> < </button>
-            <% for(var i = 1; i <= Math.ceil((items.length) / 20); i++) { %>
-            <a class = "btn btn-outline-primary d-none" href = "#<%=i%>"><%=i%> </a>
-            <% } %>
-            <button class = "btn btn-outline-primary" id = "next"> > </button>
-            <button class = "btn btn-outline-primary" id = "nextRow"> >> </button>
+    <% if (items.length > 0) { %>
+        <div class = "d-flex justify-content-center">
+            <div>
+                <button class = "btn btn-outline-primary" id = "prevRow"> << </button>
+                <button class = "btn btn-outline-primary" id = "prev"> < </button>
+                <% for(var i = 1; i <= Math.ceil((items.length) / 10); i++) { %>
+                <a class = "btn btn-outline-primary d-none" href = "#<%=i%>"><%=i%> </a>
+                <% } %>
+                <button class = "btn btn-outline-primary" id = "next"> > </button>
+                <button class = "btn btn-outline-primary" id = "nextRow"> >> </button>
+            </div>
         </div>
-    </div>
+    <% } %>
 </div>
 
 
@@ -157,7 +158,7 @@
         }
     }
 
-    var numItemsShowed = 20;
+    var numItemsShowed = 10;
     var numPages = Math.ceil($(".item").length / numItemsShowed);
 
     //sanitize hash
@@ -197,7 +198,7 @@
     $("#nextRow").click(function ()
     {
         var currentRow = Math.floor(hash / 5) + ((hash % 5) > 0 ? 1 : 0);
-        if (currentRow  < Math.floor(numPages / 5))
+        if (currentRow  < Math.ceil(numPages / 5))
         {
             window.location.hash = (currentRow * 5) + 1;
         }
