--- a/public/app.css
+++ b/public/app.css
@@ -9,12 +9,6 @@ td
 }
 
 
-input[type='text']
-{
-	height: 40px;
-	line-height: 40px;
-	text-align: center;
-}
 
 
 .pointerpass
@@ -170,7 +164,11 @@ courtesy of https://www.w3schools.com/howto/howto_css_flip_card.asp
 	border-bottom-right-radius: 60px;
 	border-top-right-radius: 60px;
 	background-color: #F2F2F2;
+}
 
+#message
+{
+	border-radius: 25px;
 }
 
 #inthegreen
